# conways-game-of-langs

./: .gitignore  README.md  gosper_glider_gun.txt  make_video.ps1  start.txt
.github/workflows/: cpp_tests.yml  haskell_tests.yml  java_tests.yml  javascript_nodejs_tests.yml  python.yml  python_tests.yml  racket_tests.yml
cpp/: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  README.md  main.cpp
haskell/: .gitignore  game-of-langs-haskell.cabal  main.hs
java/: .gitignore  README.md  pom.xml
java/src/main/java/game_of_life/app/: Main.java
java/src/main/java/game_of_life/main/: Board.java  Main.java
javascript/nodejs/: .gitignore  README.md  main.js  package-lock.json  package.json
python/: README.md  main.py
racket/: README.md  main.rkt
testing/: run_diffs.sh  test_glider.txt
testing/reference_images/: 0.pbm  1.pbm  2.pbm  3.pbm  4.pbm  5.pbm  6.pbm  7.pbm  8.pbm  9.pbm
testing/test_images/: README.md
